@@ -1,0 +1,2 @@
+dl-symaddr.c
+dl-fptr.c
