@@ -1,5 +1,8 @@
 2000-05-05  Ulrich Drepper  <drepper@redhat.com>
 
+	* elf/Makefile (distribute): Add dl-lookupcfg.h.
+	* sysdeps/ia64/Dist: New file.
+
 	* elf/dl-load.c (_dl_map_object_from_fd): Little of computation of
 	parameter to mprotect and for variable assignments.
 
